ALTP/rule.output
Terminaux inutilisés dans la grammaire

   tTAB
   tDOLLAR
   tSTRING


La règle est inutile dans l'analyseur à cause de conflits

   59 $@12: %empty


État 32 conflits: 1 réduction/réduction
État 51 conflits: 3 réduction/réduction
État 59 conflits: 1 réduction/réduction
État 61 conflits: 9 réduction/réduction


Grammaire

    0 $accept: Main $end

    1 $@1: %empty

    2 Main: DeclFunction tMAIN $@1 tPO tPC Body

    3 $@2: %empty

    4 DeclFunction: vartype tVAR $@2 tPO Params tPC FuncBody tFINSTR
    5             | %empty

    6 Params: Param NextParam
    7       | %empty

    8 NextParam: tVIRGULE Param
    9          | %empty

   10 Param: vartype tVAR
   11      | tVAR

   12 FuncBody: tACO FuncInstr tACC

   13 FuncInstrs: Instructions
   14           | RetVal

   15 FuncInstr: FuncInstrs FuncInstr
   16          | FuncInstrs
   17          | %empty

   18 RetVal: tRETURN tVAR tFINSTR

   19 Body: tACO Instruction tACC

   20 Instruction: Instructions Instruction
   21            | Instructions
   22            | %empty

   23 Instructions: Calcul
   24             | For
   25             | While
   26             | Print
   27             | Declaration
   28             | If
   29             | RetVal

   30 Declaration: vartype Declarations tFINSTR

   31 Declarations: Multideclaration Declarations
   32             | Lastdeclaration

   33 Multideclaration: tVAR tVIRGULE
   34                 | tVAR tEQUAL tINTNR tVIRGULE

   35 Lastdeclaration: tVAR
   36                | tVAR tEQUAL tINTNR

   37 vartype: tINT
   38        | tCONST

   39 Print: tPRINTF tPO tVAR tPC tFINSTR

   40 $@3: %empty

   41 $@4: %empty

   42 $@5: %empty

   43 If: tIF $@3 tPO Condition tPC $@4 Body $@5 Else

   44 Else: tELSE Body
   45     | %empty

   46 Condition: Expression tCHECKEQ Expression
   47          | Expression tLESS Expression
   48          | Expression tCHECKHIGHER Expression
   49          | Expression tLESSEQUAL Expression
   50          | Expression tMOREEQUAL Expression

   51 $@6: %empty

   52 $@7: %empty

   53 While: tWHILE $@6 tPO Condition tPC $@7 Body

   54 $@8: %empty

   55 $@9: %empty

   56 $@10: %empty

   57 $@11: %empty

   58 For: tFOR tPO $@8 DeclCalc $@9 Condition tFINSTR $@10 tVAR tPLUSPLUS tPC $@11 Body

   59 $@12: %empty

   60 $@13: %empty

   61 $@14: %empty

   62 $@15: %empty

   63 For: tFOR tPO $@12 DeclCalc $@13 Condition tFINSTR $@14 tVAR tMINUSMINUS tPC $@15 Body

   64 DeclCalc: Declaration
   65         | Calcul

   66 Calcul: tVAR tEQUAL Expression tFINSTR
   67       | tVAR tEQUAL tSUBTRACT Expression tFINSTR
   68       | tVAR tPLUSPLUS tFINSTR
   69       | tVAR tMINUSMINUS tFINSTR
   70       | tVAR tMINUSEQUAL Expression tFINSTR
   71       | tVAR tPLUSEQUAL Expression tFINSTR

   72 Expression: Expression tADD Expression
   73           | Expression tSUBTRACT Expression
   74           | Expression tDIVIDE Expression
   75           | Expression tMULTIPLY Expression
   76           | tVAR
   77           | tINTNR
   78           | Function
   79           | tPO tSUBTRACT tINTNR tPC
   80           | tPO Expression tPC

   81 $@16: %empty

   82 Function: tVAR tPO $@16 Params tPC


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tINT (258) 37
tACO (259) 12 19
tACC (260) 12 19
tCONST (261) 38
tADD (262) 72
tSUBTRACT (263) 67 73 79
tDIVIDE (264) 74
tMULTIPLY (265) 75
tEQUAL (266) 34 36 66 67
tPLUSPLUS (267) 58 68
tMINUSMINUS (268) 63 69
tIF (269) 43
tELSE (270) 44
tCHECKEQ (271) 46
tPO (272) 2 4 39 43 53 58 63 79 80 82
tPC (273) 2 4 39 43 53 58 63 79 80 82
tTAB (274)
tVIRGULE (275) 8 33 34
tDOLLAR (276)
tFINSTR (277) 4 18 30 39 58 63 66 67 68 69 70 71
tINTNR (278) 34 36 77 79
tWHILE (279) 53
tPRINTF (280) 39
tMAIN (281) 2
tVAR (282) 4 10 11 18 33 34 35 36 39 58 63 66 67 68 69 70 71 76 82
tFOR (283) 58 63
tSTRING (284)
tCHECKHIGHER (285) 48
tLESS (286) 47
tLESSEQUAL (287) 49
tMOREEQUAL (288) 50
tMINUSEQUAL (289) 70
tPLUSEQUAL (290) 71
tRETURN (291) 18


Non-terminaux, suivis des règles où ils apparaissent

$accept (37)
    à gauche: 0
Main (38)
    à gauche: 2, à droite: 0
$@1 (39)
    à gauche: 1, à droite: 2
DeclFunction (40)
    à gauche: 4 5, à droite: 2
$@2 (41)
    à gauche: 3, à droite: 4
Params (42)
    à gauche: 6 7, à droite: 4 82
NextParam (43)
    à gauche: 8 9, à droite: 6
Param (44)
    à gauche: 10 11, à droite: 6 8
FuncBody (45)
    à gauche: 12, à droite: 4
FuncInstrs (46)
    à gauche: 13 14, à droite: 15 16
FuncInstr (47)
    à gauche: 15 16 17, à droite: 12 15
RetVal (48)
    à gauche: 18, à droite: 14 29
Body (49)
    à gauche: 19, à droite: 2 43 44 53 58 63
Instruction (50)
    à gauche: 20 21 22, à droite: 19 20
Instructions (51)
    à gauche: 23 24 25 26 27 28 29, à droite: 13 20 21
Declaration (52)
    à gauche: 30, à droite: 27 64
Declarations (53)
    à gauche: 31 32, à droite: 30 31
Multideclaration (54)
    à gauche: 33 34, à droite: 31
Lastdeclaration (55)
    à gauche: 35 36, à droite: 32
vartype (56)
    à gauche: 37 38, à droite: 4 10 30
Print (57)
    à gauche: 39, à droite: 26
If (58)
    à gauche: 43, à droite: 28
$@3 (59)
    à gauche: 40, à droite: 43
$@4 (60)
    à gauche: 41, à droite: 43
$@5 (61)
    à gauche: 42, à droite: 43
Else (62)
    à gauche: 44 45, à droite: 43
Condition (63)
    à gauche: 46 47 48 49 50, à droite: 43 53 58 63
While (64)
    à gauche: 53, à droite: 25
$@6 (65)
    à gauche: 51, à droite: 53
$@7 (66)
    à gauche: 52, à droite: 53
For (67)
    à gauche: 58 63, à droite: 24
$@8 (68)
    à gauche: 54, à droite: 58
$@9 (69)
    à gauche: 55, à droite: 58
$@10 (70)
    à gauche: 56, à droite: 58
$@11 (71)
    à gauche: 57, à droite: 58
$@12 (72)
    à gauche: 59, à droite: 63
$@13 (73)
    à gauche: 60, à droite: 63
$@14 (74)
    à gauche: 61, à droite: 63
$@15 (75)
    à gauche: 62, à droite: 63
DeclCalc (76)
    à gauche: 64 65, à droite: 58 63
Calcul (77)
    à gauche: 66 67 68 69 70 71, à droite: 23 65
Expression (78)
    à gauche: 72 73 74 75 76 77 78 79 80, à droite: 46 47 48 49 50
    66 67 70 71 72 73 74 75 80
Function (79)
    à gauche: 82, à droite: 78
$@16 (80)
    à gauche: 81, à droite: 82


État 0

    0 $accept: . Main $end

    tINT    décalage et aller à l'état 1
    tCONST  décalage et aller à l'état 2

    $défaut  réduction par utilisation de la règle 5 (DeclFunction)

    Main          aller à l'état 3
    DeclFunction  aller à l'état 4
    vartype       aller à l'état 5


État 1

   37 vartype: tINT .

    $défaut  réduction par utilisation de la règle 37 (vartype)


État 2

   38 vartype: tCONST .

    $défaut  réduction par utilisation de la règle 38 (vartype)


État 3

    0 $accept: Main . $end

    $end  décalage et aller à l'état 6


État 4

    2 Main: DeclFunction . tMAIN $@1 tPO tPC Body

    tMAIN  décalage et aller à l'état 7


État 5

    4 DeclFunction: vartype . tVAR $@2 tPO Params tPC FuncBody tFINSTR

    tVAR  décalage et aller à l'état 8


État 6

    0 $accept: Main $end .

    $défaut  accepter


État 7

    2 Main: DeclFunction tMAIN . $@1 tPO tPC Body

    $défaut  réduction par utilisation de la règle 1 ($@1)

    $@1  aller à l'état 9


État 8

    4 DeclFunction: vartype tVAR . $@2 tPO Params tPC FuncBody tFINSTR

    $défaut  réduction par utilisation de la règle 3 ($@2)

    $@2  aller à l'état 10


État 9

    2 Main: DeclFunction tMAIN $@1 . tPO tPC Body

    tPO  décalage et aller à l'état 11


État 10

    4 DeclFunction: vartype tVAR $@2 . tPO Params tPC FuncBody tFINSTR

    tPO  décalage et aller à l'état 12


État 11

    2 Main: DeclFunction tMAIN $@1 tPO . tPC Body

    tPC  décalage et aller à l'état 13


État 12

    4 DeclFunction: vartype tVAR $@2 tPO . Params tPC FuncBody tFINSTR

    tINT    décalage et aller à l'état 1
    tCONST  décalage et aller à l'état 2
    tVAR    décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 7 (Params)

    Params   aller à l'état 15
    Param    aller à l'état 16
    vartype  aller à l'état 17


État 13

    2 Main: DeclFunction tMAIN $@1 tPO tPC . Body

    tACO  décalage et aller à l'état 18

    Body  aller à l'état 19


État 14

   11 Param: tVAR .

    $défaut  réduction par utilisation de la règle 11 (Param)


État 15

    4 DeclFunction: vartype tVAR $@2 tPO Params . tPC FuncBody tFINSTR

    tPC  décalage et aller à l'état 20


État 16

    6 Params: Param . NextParam

    tVIRGULE  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 9 (NextParam)

    NextParam  aller à l'état 22


État 17

   10 Param: vartype . tVAR

    tVAR  décalage et aller à l'état 23


État 18

   19 Body: tACO . Instruction tACC

    tINT     décalage et aller à l'état 1
    tCONST   décalage et aller à l'état 2
    tIF      décalage et aller à l'état 24
    tWHILE   décalage et aller à l'état 25
    tPRINTF  décalage et aller à l'état 26
    tVAR     décalage et aller à l'état 27
    tFOR     décalage et aller à l'état 28
    tRETURN  décalage et aller à l'état 29

    $défaut  réduction par utilisation de la règle 22 (Instruction)

    RetVal        aller à l'état 30
    Instruction   aller à l'état 31
    Instructions  aller à l'état 32
    Declaration   aller à l'état 33
    vartype       aller à l'état 34
    Print         aller à l'état 35
    If            aller à l'état 36
    While         aller à l'état 37
    For           aller à l'état 38
    Calcul        aller à l'état 39


État 19

    2 Main: DeclFunction tMAIN $@1 tPO tPC Body .

    $défaut  réduction par utilisation de la règle 2 (Main)


État 20

    4 DeclFunction: vartype tVAR $@2 tPO Params tPC . FuncBody tFINSTR

    tACO  décalage et aller à l'état 40

    FuncBody  aller à l'état 41


État 21

    8 NextParam: tVIRGULE . Param

    tINT    décalage et aller à l'état 1
    tCONST  décalage et aller à l'état 2
    tVAR    décalage et aller à l'état 14

    Param    aller à l'état 42
    vartype  aller à l'état 17


État 22

    6 Params: Param NextParam .

    $défaut  réduction par utilisation de la règle 6 (Params)


État 23

   10 Param: vartype tVAR .

    $défaut  réduction par utilisation de la règle 10 (Param)


État 24

   43 If: tIF . $@3 tPO Condition tPC $@4 Body $@5 Else

    $défaut  réduction par utilisation de la règle 40 ($@3)

    $@3  aller à l'état 43


État 25

   53 While: tWHILE . $@6 tPO Condition tPC $@7 Body

    $défaut  réduction par utilisation de la règle 51 ($@6)

    $@6  aller à l'état 44


État 26

   39 Print: tPRINTF . tPO tVAR tPC tFINSTR

    tPO  décalage et aller à l'état 45


État 27

   66 Calcul: tVAR . tEQUAL Expression tFINSTR
   67       | tVAR . tEQUAL tSUBTRACT Expression tFINSTR
   68       | tVAR . tPLUSPLUS tFINSTR
   69       | tVAR . tMINUSMINUS tFINSTR
   70       | tVAR . tMINUSEQUAL Expression tFINSTR
   71       | tVAR . tPLUSEQUAL Expression tFINSTR

    tEQUAL       décalage et aller à l'état 46
    tPLUSPLUS    décalage et aller à l'état 47
    tMINUSMINUS  décalage et aller à l'état 48
    tMINUSEQUAL  décalage et aller à l'état 49
    tPLUSEQUAL   décalage et aller à l'état 50


État 28

   58 For: tFOR . tPO $@8 DeclCalc $@9 Condition tFINSTR $@10 tVAR tPLUSPLUS tPC $@11 Body
   63    | tFOR . tPO $@12 DeclCalc $@13 Condition tFINSTR $@14 tVAR tMINUSMINUS tPC $@15 Body

    tPO  décalage et aller à l'état 51


État 29

   18 RetVal: tRETURN . tVAR tFINSTR

    tVAR  décalage et aller à l'état 52


État 30

   29 Instructions: RetVal .

    $défaut  réduction par utilisation de la règle 29 (Instructions)


État 31

   19 Body: tACO Instruction . tACC

    tACC  décalage et aller à l'état 53


État 32

   20 Instruction: Instructions . Instruction
   21            | Instructions .

    tINT     décalage et aller à l'état 1
    tCONST   décalage et aller à l'état 2
    tIF      décalage et aller à l'état 24
    tWHILE   décalage et aller à l'état 25
    tPRINTF  décalage et aller à l'état 26
    tVAR     décalage et aller à l'état 27
    tFOR     décalage et aller à l'état 28
    tRETURN  décalage et aller à l'état 29

    tACC      réduction par utilisation de la règle 21 (Instruction)
    tACC      [réduction par utilisation de la règle 22 (Instruction)]
    $défaut  réduction par utilisation de la règle 21 (Instruction)

    RetVal        aller à l'état 30
    Instruction   aller à l'état 54
    Instructions  aller à l'état 32
    Declaration   aller à l'état 33
    vartype       aller à l'état 34
    Print         aller à l'état 35
    If            aller à l'état 36
    While         aller à l'état 37
    For           aller à l'état 38
    Calcul        aller à l'état 39


État 33

   27 Instructions: Declaration .

    $défaut  réduction par utilisation de la règle 27 (Instructions)


État 34

   30 Declaration: vartype . Declarations tFINSTR

    tVAR  décalage et aller à l'état 55

    Declarations      aller à l'état 56
    Multideclaration  aller à l'état 57
    Lastdeclaration   aller à l'état 58


État 35

   26 Instructions: Print .

    $défaut  réduction par utilisation de la règle 26 (Instructions)


État 36

   28 Instructions: If .

    $défaut  réduction par utilisation de la règle 28 (Instructions)


État 37

   25 Instructions: While .

    $défaut  réduction par utilisation de la règle 25 (Instructions)


État 38

   24 Instructions: For .

    $défaut  réduction par utilisation de la règle 24 (Instructions)


État 39

   23 Instructions: Calcul .

    $défaut  réduction par utilisation de la règle 23 (Instructions)


État 40

   12 FuncBody: tACO . FuncInstr tACC

    tINT     décalage et aller à l'état 1
    tCONST   décalage et aller à l'état 2
    tIF      décalage et aller à l'état 24
    tWHILE   décalage et aller à l'état 25
    tPRINTF  décalage et aller à l'état 26
    tVAR     décalage et aller à l'état 27
    tFOR     décalage et aller à l'état 28
    tRETURN  décalage et aller à l'état 29

    $défaut  réduction par utilisation de la règle 17 (FuncInstr)

    FuncInstrs    aller à l'état 59
    FuncInstr     aller à l'état 60
    RetVal        aller à l'état 61
    Instructions  aller à l'état 62
    Declaration   aller à l'état 33
    vartype       aller à l'état 34
    Print         aller à l'état 35
    If            aller à l'état 36
    While         aller à l'état 37
    For           aller à l'état 38
    Calcul        aller à l'état 39


État 41

    4 DeclFunction: vartype tVAR $@2 tPO Params tPC FuncBody . tFINSTR

    tFINSTR  décalage et aller à l'état 63


État 42

    8 NextParam: tVIRGULE Param .

    $défaut  réduction par utilisation de la règle 8 (NextParam)


État 43

   43 If: tIF $@3 . tPO Condition tPC $@4 Body $@5 Else

    tPO  décalage et aller à l'état 64


État 44

   53 While: tWHILE $@6 . tPO Condition tPC $@7 Body

    tPO  décalage et aller à l'état 65


État 45

   39 Print: tPRINTF tPO . tVAR tPC tFINSTR

    tVAR  décalage et aller à l'état 66


État 46

   66 Calcul: tVAR tEQUAL . Expression tFINSTR
   67       | tVAR tEQUAL . tSUBTRACT Expression tFINSTR

    tSUBTRACT  décalage et aller à l'état 67
    tPO        décalage et aller à l'état 68
    tINTNR     décalage et aller à l'état 69
    tVAR       décalage et aller à l'état 70

    Expression  aller à l'état 71
    Function    aller à l'état 72


État 47

   68 Calcul: tVAR tPLUSPLUS . tFINSTR

    tFINSTR  décalage et aller à l'état 73


État 48

   69 Calcul: tVAR tMINUSMINUS . tFINSTR

    tFINSTR  décalage et aller à l'état 74


État 49

   70 Calcul: tVAR tMINUSEQUAL . Expression tFINSTR

    tPO     décalage et aller à l'état 68
    tINTNR  décalage et aller à l'état 69
    tVAR    décalage et aller à l'état 70

    Expression  aller à l'état 75
    Function    aller à l'état 72


État 50

   71 Calcul: tVAR tPLUSEQUAL . Expression tFINSTR

    tPO     décalage et aller à l'état 68
    tINTNR  décalage et aller à l'état 69
    tVAR    décalage et aller à l'état 70

    Expression  aller à l'état 76
    Function    aller à l'état 72


État 51

   58 For: tFOR tPO . $@8 DeclCalc $@9 Condition tFINSTR $@10 tVAR tPLUSPLUS tPC $@11 Body
   63    | tFOR tPO . $@12 DeclCalc $@13 Condition tFINSTR $@14 tVAR tMINUSMINUS tPC $@15 Body

    tINT      réduction par utilisation de la règle 54 ($@8)
    tINT      [réduction par utilisation de la règle 59 ($@12)]
    tCONST    réduction par utilisation de la règle 54 ($@8)
    tCONST    [réduction par utilisation de la règle 59 ($@12)]
    tVAR      réduction par utilisation de la règle 54 ($@8)
    tVAR      [réduction par utilisation de la règle 59 ($@12)]
    $défaut  réduction par utilisation de la règle 54 ($@8)

    $@8   aller à l'état 77
    $@12  aller à l'état 78


État 52

   18 RetVal: tRETURN tVAR . tFINSTR

    tFINSTR  décalage et aller à l'état 79


État 53

   19 Body: tACO Instruction tACC .

    $défaut  réduction par utilisation de la règle 19 (Body)


État 54

   20 Instruction: Instructions Instruction .

    $défaut  réduction par utilisation de la règle 20 (Instruction)


État 55

   33 Multideclaration: tVAR . tVIRGULE
   34                 | tVAR . tEQUAL tINTNR tVIRGULE
   35 Lastdeclaration: tVAR .
   36                | tVAR . tEQUAL tINTNR

    tEQUAL    décalage et aller à l'état 80
    tVIRGULE  décalage et aller à l'état 81

    $défaut  réduction par utilisation de la règle 35 (Lastdeclaration)


État 56

   30 Declaration: vartype Declarations . tFINSTR

    tFINSTR  décalage et aller à l'état 82


État 57

   31 Declarations: Multideclaration . Declarations

    tVAR  décalage et aller à l'état 55

    Declarations      aller à l'état 83
    Multideclaration  aller à l'état 57
    Lastdeclaration   aller à l'état 58


État 58

   32 Declarations: Lastdeclaration .

    $défaut  réduction par utilisation de la règle 32 (Declarations)


État 59

   15 FuncInstr: FuncInstrs . FuncInstr
   16          | FuncInstrs .

    tINT     décalage et aller à l'état 1
    tCONST   décalage et aller à l'état 2
    tIF      décalage et aller à l'état 24
    tWHILE   décalage et aller à l'état 25
    tPRINTF  décalage et aller à l'état 26
    tVAR     décalage et aller à l'état 27
    tFOR     décalage et aller à l'état 28
    tRETURN  décalage et aller à l'état 29

    tACC      réduction par utilisation de la règle 16 (FuncInstr)
    tACC      [réduction par utilisation de la règle 17 (FuncInstr)]
    $défaut  réduction par utilisation de la règle 16 (FuncInstr)

    FuncInstrs    aller à l'état 59
    FuncInstr     aller à l'état 84
    RetVal        aller à l'état 61
    Instructions  aller à l'état 62
    Declaration   aller à l'état 33
    vartype       aller à l'état 34
    Print         aller à l'état 35
    If            aller à l'état 36
    While         aller à l'état 37
    For           aller à l'état 38
    Calcul        aller à l'état 39


État 60

   12 FuncBody: tACO FuncInstr . tACC

    tACC  décalage et aller à l'état 85


État 61

   14 FuncInstrs: RetVal .
   29 Instructions: RetVal .

    tINT      réduction par utilisation de la règle 14 (FuncInstrs)
    tINT      [réduction par utilisation de la règle 29 (Instructions)]
    tACC      réduction par utilisation de la règle 14 (FuncInstrs)
    tACC      [réduction par utilisation de la règle 29 (Instructions)]
    tCONST    réduction par utilisation de la règle 14 (FuncInstrs)
    tCONST    [réduction par utilisation de la règle 29 (Instructions)]
    tIF       réduction par utilisation de la règle 14 (FuncInstrs)
    tIF       [réduction par utilisation de la règle 29 (Instructions)]
    tWHILE    réduction par utilisation de la règle 14 (FuncInstrs)
    tWHILE    [réduction par utilisation de la règle 29 (Instructions)]
    tPRINTF   réduction par utilisation de la règle 14 (FuncInstrs)
    tPRINTF   [réduction par utilisation de la règle 29 (Instructions)]
    tVAR      réduction par utilisation de la règle 14 (FuncInstrs)
    tVAR      [réduction par utilisation de la règle 29 (Instructions)]
    tFOR      réduction par utilisation de la règle 14 (FuncInstrs)
    tFOR      [réduction par utilisation de la règle 29 (Instructions)]
    tRETURN   réduction par utilisation de la règle 14 (FuncInstrs)
    tRETURN   [réduction par utilisation de la règle 29 (Instructions)]
    $défaut  réduction par utilisation de la règle 14 (FuncInstrs)


État 62

   13 FuncInstrs: Instructions .

    $défaut  réduction par utilisation de la règle 13 (FuncInstrs)


État 63

    4 DeclFunction: vartype tVAR $@2 tPO Params tPC FuncBody tFINSTR .

    $défaut  réduction par utilisation de la règle 4 (DeclFunction)


État 64

   43 If: tIF $@3 tPO . Condition tPC $@4 Body $@5 Else

    tPO     décalage et aller à l'état 68
    tINTNR  décalage et aller à l'état 69
    tVAR    décalage et aller à l'état 70

    Condition   aller à l'état 86
    Expression  aller à l'état 87
    Function    aller à l'état 72


État 65

   53 While: tWHILE $@6 tPO . Condition tPC $@7 Body

    tPO     décalage et aller à l'état 68
    tINTNR  décalage et aller à l'état 69
    tVAR    décalage et aller à l'état 70

    Condition   aller à l'état 88
    Expression  aller à l'état 87
    Function    aller à l'état 72


État 66

   39 Print: tPRINTF tPO tVAR . tPC tFINSTR

    tPC  décalage et aller à l'état 89


État 67

   67 Calcul: tVAR tEQUAL tSUBTRACT . Expression tFINSTR

    tPO     décalage et aller à l'état 68
    tINTNR  décalage et aller à l'état 69
    tVAR    décalage et aller à l'état 70

    Expression  aller à l'état 90
    Function    aller à l'état 72


État 68

   79 Expression: tPO . tSUBTRACT tINTNR tPC
   80           | tPO . Expression tPC

    tSUBTRACT  décalage et aller à l'état 91
    tPO        décalage et aller à l'état 68
    tINTNR     décalage et aller à l'état 69
    tVAR       décalage et aller à l'état 70

    Expression  aller à l'état 92
    Function    aller à l'état 72


État 69

   77 Expression: tINTNR .

    $défaut  réduction par utilisation de la règle 77 (Expression)


État 70

   76 Expression: tVAR .
   82 Function: tVAR . tPO $@16 Params tPC

    tPO  décalage et aller à l'état 93

    $défaut  réduction par utilisation de la règle 76 (Expression)


État 71

   66 Calcul: tVAR tEQUAL Expression . tFINSTR
   72 Expression: Expression . tADD Expression
   73           | Expression . tSUBTRACT Expression
   74           | Expression . tDIVIDE Expression
   75           | Expression . tMULTIPLY Expression

    tADD       décalage et aller à l'état 94
    tSUBTRACT  décalage et aller à l'état 95
    tDIVIDE    décalage et aller à l'état 96
    tMULTIPLY  décalage et aller à l'état 97
    tFINSTR    décalage et aller à l'état 98


État 72

   78 Expression: Function .

    $défaut  réduction par utilisation de la règle 78 (Expression)


État 73

   68 Calcul: tVAR tPLUSPLUS tFINSTR .

    $défaut  réduction par utilisation de la règle 68 (Calcul)


État 74

   69 Calcul: tVAR tMINUSMINUS tFINSTR .

    $défaut  réduction par utilisation de la règle 69 (Calcul)


État 75

   70 Calcul: tVAR tMINUSEQUAL Expression . tFINSTR
   72 Expression: Expression . tADD Expression
   73           | Expression . tSUBTRACT Expression
   74           | Expression . tDIVIDE Expression
   75           | Expression . tMULTIPLY Expression

    tADD       décalage et aller à l'état 94
    tSUBTRACT  décalage et aller à l'état 95
    tDIVIDE    décalage et aller à l'état 96
    tMULTIPLY  décalage et aller à l'état 97
    tFINSTR    décalage et aller à l'état 99


État 76

   71 Calcul: tVAR tPLUSEQUAL Expression . tFINSTR
   72 Expression: Expression . tADD Expression
   73           | Expression . tSUBTRACT Expression
   74           | Expression . tDIVIDE Expression
   75           | Expression . tMULTIPLY Expression

    tADD       décalage et aller à l'état 94
    tSUBTRACT  décalage et aller à l'état 95
    tDIVIDE    décalage et aller à l'état 96
    tMULTIPLY  décalage et aller à l'état 97
    tFINSTR    décalage et aller à l'état 100


État 77

   58 For: tFOR tPO $@8 . DeclCalc $@9 Condition tFINSTR $@10 tVAR tPLUSPLUS tPC $@11 Body

    tINT    décalage et aller à l'état 1
    tCONST  décalage et aller à l'état 2
    tVAR    décalage et aller à l'état 27

    Declaration  aller à l'état 101
    vartype      aller à l'état 34
    DeclCalc     aller à l'état 102
    Calcul       aller à l'état 103


État 78

   63 For: tFOR tPO $@12 . DeclCalc $@13 Condition tFINSTR $@14 tVAR tMINUSMINUS tPC $@15 Body

    tINT    décalage et aller à l'état 1
    tCONST  décalage et aller à l'état 2
    tVAR    décalage et aller à l'état 27

    Declaration  aller à l'état 101
    vartype      aller à l'état 34
    DeclCalc     aller à l'état 104
    Calcul       aller à l'état 103


État 79

   18 RetVal: tRETURN tVAR tFINSTR .

    $défaut  réduction par utilisation de la règle 18 (RetVal)


État 80

   34 Multideclaration: tVAR tEQUAL . tINTNR tVIRGULE
   36 Lastdeclaration: tVAR tEQUAL . tINTNR

    tINTNR  décalage et aller à l'état 105


État 81

   33 Multideclaration: tVAR tVIRGULE .

    $défaut  réduction par utilisation de la règle 33 (Multideclaration)


État 82

   30 Declaration: vartype Declarations tFINSTR .

    $défaut  réduction par utilisation de la règle 30 (Declaration)


État 83

   31 Declarations: Multideclaration Declarations .

    $défaut  réduction par utilisation de la règle 31 (Declarations)


État 84

   15 FuncInstr: FuncInstrs FuncInstr .

    $défaut  réduction par utilisation de la règle 15 (FuncInstr)


État 85

   12 FuncBody: tACO FuncInstr tACC .

    $défaut  réduction par utilisation de la règle 12 (FuncBody)


État 86

   43 If: tIF $@3 tPO Condition . tPC $@4 Body $@5 Else

    tPC  décalage et aller à l'état 106


État 87

   46 Condition: Expression . tCHECKEQ Expression
   47          | Expression . tLESS Expression
   48          | Expression . tCHECKHIGHER Expression
   49          | Expression . tLESSEQUAL Expression
   50          | Expression . tMOREEQUAL Expression
   72 Expression: Expression . tADD Expression
   73           | Expression . tSUBTRACT Expression
   74           | Expression . tDIVIDE Expression
   75           | Expression . tMULTIPLY Expression

    tADD          décalage et aller à l'état 94
    tSUBTRACT     décalage et aller à l'état 95
    tDIVIDE       décalage et aller à l'état 96
    tMULTIPLY     décalage et aller à l'état 97
    tCHECKEQ      décalage et aller à l'état 107
    tCHECKHIGHER  décalage et aller à l'état 108
    tLESS         décalage et aller à l'état 109
    tLESSEQUAL    décalage et aller à l'état 110
    tMOREEQUAL    décalage et aller à l'état 111


État 88

   53 While: tWHILE $@6 tPO Condition . tPC $@7 Body

    tPC  décalage et aller à l'état 112


État 89

   39 Print: tPRINTF tPO tVAR tPC . tFINSTR

    tFINSTR  décalage et aller à l'état 113


État 90

   67 Calcul: tVAR tEQUAL tSUBTRACT Expression . tFINSTR
   72 Expression: Expression . tADD Expression
   73           | Expression . tSUBTRACT Expression
   74           | Expression . tDIVIDE Expression
   75           | Expression . tMULTIPLY Expression

    tADD       décalage et aller à l'état 94
    tSUBTRACT  décalage et aller à l'état 95
    tDIVIDE    décalage et aller à l'état 96
    tMULTIPLY  décalage et aller à l'état 97
    tFINSTR    décalage et aller à l'état 114


État 91

   79 Expression: tPO tSUBTRACT . tINTNR tPC

    tINTNR  décalage et aller à l'état 115


État 92

   72 Expression: Expression . tADD Expression
   73           | Expression . tSUBTRACT Expression
   74           | Expression . tDIVIDE Expression
   75           | Expression . tMULTIPLY Expression
   80           | tPO Expression . tPC

    tADD       décalage et aller à l'état 94
    tSUBTRACT  décalage et aller à l'état 95
    tDIVIDE    décalage et aller à l'état 96
    tMULTIPLY  décalage et aller à l'état 97
    tPC        décalage et aller à l'état 116


État 93

   82 Function: tVAR tPO . $@16 Params tPC

    $défaut  réduction par utilisation de la règle 81 ($@16)

    $@16  aller à l'état 117


État 94

   72 Expression: Expression tADD . Expression

    tPO     décalage et aller à l'état 68
    tINTNR  décalage et aller à l'état 69
    tVAR    décalage et aller à l'état 70

    Expression  aller à l'état 118
    Function    aller à l'état 72


État 95

   73 Expression: Expression tSUBTRACT . Expression

    tPO     décalage et aller à l'état 68
    tINTNR  décalage et aller à l'état 69
    tVAR    décalage et aller à l'état 70

    Expression  aller à l'état 119
    Function    aller à l'état 72


État 96

   74 Expression: Expression tDIVIDE . Expression

    tPO     décalage et aller à l'état 68
    tINTNR  décalage et aller à l'état 69
    tVAR    décalage et aller à l'état 70

    Expression  aller à l'état 120
    Function    aller à l'état 72


État 97

   75 Expression: Expression tMULTIPLY . Expression

    tPO     décalage et aller à l'état 68
    tINTNR  décalage et aller à l'état 69
    tVAR    décalage et aller à l'état 70

    Expression  aller à l'état 121
    Function    aller à l'état 72


État 98

   66 Calcul: tVAR tEQUAL Expression tFINSTR .

    $défaut  réduction par utilisation de la règle 66 (Calcul)


État 99

   70 Calcul: tVAR tMINUSEQUAL Expression tFINSTR .

    $défaut  réduction par utilisation de la règle 70 (Calcul)


État 100

   71 Calcul: tVAR tPLUSEQUAL Expression tFINSTR .

    $défaut  réduction par utilisation de la règle 71 (Calcul)


État 101

   64 DeclCalc: Declaration .

    $défaut  réduction par utilisation de la règle 64 (DeclCalc)


État 102

   58 For: tFOR tPO $@8 DeclCalc . $@9 Condition tFINSTR $@10 tVAR tPLUSPLUS tPC $@11 Body

    $défaut  réduction par utilisation de la règle 55 ($@9)

    $@9  aller à l'état 122


État 103

   65 DeclCalc: Calcul .

    $défaut  réduction par utilisation de la règle 65 (DeclCalc)


État 104

   63 For: tFOR tPO $@12 DeclCalc . $@13 Condition tFINSTR $@14 tVAR tMINUSMINUS tPC $@15 Body

    $défaut  réduction par utilisation de la règle 60 ($@13)

    $@13  aller à l'état 123


État 105

   34 Multideclaration: tVAR tEQUAL tINTNR . tVIRGULE
   36 Lastdeclaration: tVAR tEQUAL tINTNR .

    tVIRGULE  décalage et aller à l'état 124

    $défaut  réduction par utilisation de la règle 36 (Lastdeclaration)


État 106

   43 If: tIF $@3 tPO Condition tPC . $@4 Body $@5 Else

    $défaut  réduction par utilisation de la règle 41 ($@4)

    $@4  aller à l'état 125


État 107

   46 Condition: Expression tCHECKEQ . Expression

    tPO     décalage et aller à l'état 68
    tINTNR  décalage et aller à l'état 69
    tVAR    décalage et aller à l'état 70

    Expression  aller à l'état 126
    Function    aller à l'état 72


État 108

   48 Condition: Expression tCHECKHIGHER . Expression
